# PL-JIT-Compiler-Project

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pull_request.yml
docs/: language_design.md  roadmap.md
scripts/: debug_test.sh  embedding_failing.sh  embedding_passing.sh  embedding_single.sh  language_debug.sh  language_failing.sh  language_passing.sh  language_single.sh  run_all_tests.sh  run_failing_tests.sh  run_passing_tests.sh  run_single_test.sh
src/: language_grammar.h  main.cpp  parse_into_ast.cpp  parse_into_ast.h  pl_ast.h  tree_interpreter.cpp  tree_interpreter.h
src/ast/: ast.h  ast_printer.cpp  ast_printer.h
src/helpers/: debug_helpers.cpp  debug_helpers.h  io_helpers.cpp  io_helpers.h  overloaded.h
src/parser/: language_grammar.h  parser.cpp  parser.h
src/tree_interpreter/: runtime_state.cpp  runtime_state.h  runtime_value.cpp  runtime_value.h  tree_interpreter.cpp  tree_interpreter.h
src/vm/: vm.cpp  vm.h
tests/: 0003_multipleprints.ee
tests/fail/: 0000_no_function_brackets.err  0001_divide_by_zero.ee  0001_divide_by_zero.err  0002_bool_arithmetic.ee  0002_bool_arithmetic.err  0003_nothing_arithmetic.ee  0003_nothing_arithmetic.err  0004_no_main_function.ee  0004_no_main_function.err  0005_missing_semicolon.ee  0006_duplicate_variable_declaration.ee  0007_unknown_variable_debug_print.ee  0009_keyword_as_variable_name.err  0010_keyword_as_function_name.ee  0010_keyword_as_function_name.err  0012_keyword_boundary_fnmain.ee  0012_keyword_boundary_fnmain.err  0015_comment_before_unknown_variable_use.ee  0016_comment_before_duplicate_declaration.ee  0016_comment_before_duplicate_declaration.err  0017_comment_before_assignment_to_undeclared.ee  0018_missing_semicolon_in_nested_block.ee  0019_unknown_variable_in_nested_block.ee  0021_unclosed_nested_block.ee  0022_scoped_variable_not_visible_after_block.ee  0023_assignment_to_scoped_variable_after_block.ee  0025_inner_scope_variable_not_visible_in_sibling_scope.ee  0026_bool_relational_operator.ee  0027_nothing_relational_operator.ee  0028_unknown_variable_in_if_condition.ee  0028_unknown_variable_in_if_condition.err  0029_unknown_variable_in_taken_if_branch.ee  0030_unknown_variable_in_else_if_condition.ee  0031_unknown_variable_in_taken_else_branch.ee  0032_if_keyword_as_variable_name.ee  0033_else_keyword_as_variable_name.err  0034_continue_outside_loop.err  0035_break_outside_loop.err  0037_continue_in_nested_block_outside_loop.err  0038_while_keyword_as_variable_name.err  (+41 more)
tests/pass/: 0001_print_nothing.ee  0002_print_5.ee  0003_multipleprints.ee  0004_print_true.ee  0005_print_false.ee  0006_print_nothing_literal.ee  0007_print_addition.ee  0008_print_precedence.ee  0009_print_parentheses.ee  0010_print_subtract_multiply_divide.ee  0011_print_multiple_addition.ee  0012_print_multiple_subtraction.ee  0013_print_multiple_division.ee  0014_print_negative_integer.ee  0015_negative_integer_arithmetic.ee  0016_initialize_and_print_variables.ee  0017_print_bool_variable.ee  0018_print_nothing_variable.ee  0019_variable_precedence_parentheses.ee  0020_negative_variable_arithmetic.ee  0021_identifier_with_keyword_prefix.ee  0022_reassign_integer_literal.ee  0023_reassign_from_variable_copies_value.ee  0024_reassign_from_expression.ee  0025_reassign_bool_and_nothing.ee  0025_reassign_bool_and_nothing.out  0026_comment_only_lines.ee  0027_trailing_comment_after_statement.ee  0028_comment_between_tokens.ee  0029_comment_inside_expression.ee  (+94 more)
(+175 files in other folders)
